Try to setup search for bugs and vulnerabilities

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -35,9 +35,20 @@ sonar.javascript.maxlines.file=500
 sonar.eslint.reportPaths=eslint-report.json
 sonar.javascript.eslint.reportPaths=eslint-report.json
 
+# Security and vulnerability settings
+sonar.security.enabled=true
+sonar.security.hotspots.enabled=true
+sonar.security.hotspots.reportPaths=npm-audit.json
+sonar.security.hotspots.severity=critical,high,medium
+sonar.security.hotspots.tags=security,vulnerability
+sonar.security.sources.javascript=src
+sonar.security.sources.javascript.encoding=UTF-8
+sonar.security.sources.javascript.file.suffixes=js
+sonar.security.sources.javascript.exclusions=node_modules/**,**/node_modules/**,**/*.min.js,**/*.bundle.js,src/test/**
+
 # Quality Profile settings
 sonar.qualitygate.wait=true
-sonar.qualitygate.conditions=coverage,duplicated_lines_density,code_smells
+sonar.qualitygate.conditions=coverage,duplicated_lines_density,code_smells,security_hotspots
 
 # Additional settings
 sonar.host.url=${SONAR_HOST_URL}
