--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
+      - name: Run npm audit
+        run: npm audit --json > npm-audit.json || true
+        
       - name: Run ESLint
         run: npm run lint || true
         
@@ -57,6 +60,11 @@ jobs:
           # ESLint integration
           SONAR_ESLINT_REPORT_PATHS: eslint-report.json
           SONAR_JAVASCRIPT_ESLINT_REPORT_PATHS: eslint-report.json
+          # Security and vulnerability settings
+          SONAR_SECURITY_HOTSPOTS_ENABLED: true
+          SONAR_SECURITY_HOTSPOTS_REPORT_PATHS: npm-audit.json
+          SONAR_SECURITY_HOTSPOTS_SEVERITY: critical,high,medium
+          SONAR_SECURITY_HOTSPOTS_TAGS: security,vulnerability
           # Additional SonarQube settings
           SONAR_ANALYSIS_MODE: preview
           SONAR_ISSUE_ASSIGNEE: false
@@ -66,4 +74,4 @@ jobs:
           SONAR_ISSUE_TAGS: maintainability,readability,complexity
           # Quality Profile settings
           SONAR_QUALITYGATE_WAIT: true
-          SONAR_QUALITYGATE_CONDITIONS: coverage,duplicated_lines_density,code_smells
+          SONAR_QUALITYGATE_CONDITIONS: coverage,duplicated_lines_density,code_smells,security_hotspots
